# rs-deviceid

./: Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: rust.yml
examples/: devDeviceId.rs
src/: lib.rs  unix.rs  windows.rs
tests/: unix_test.rs  windows_test.rs
