[package]
name = "deviceid"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "This package is used to help generate a unique random UUID as a deviceId."
repository = "https://github.com/Microsoft/rs-deviceid"
readme = "README.md"
keywords = ["deviceid", "uuid", "devDeviceId", "telemetry"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["serde_derive"] }
thiserror = "2.0"
uuid = { version = "1.18", features = ["v4"] }

[target.'cfg(target_family = "windows")'.dependencies]
winreg = "0.55.0"

[features]
default = ["serde"]
serde = ["dep:serde", "uuid/serde"]
